# whip-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml
client/: Cargo.toml  Dioxus.toml
client.save/src/: main.rs
client/src/: main.rs
server/: Cargo.toml  Dockerfile  README.md  compose.yml
server/src/: main.rs
server/static/: index.html  script.js
src/: main.rs
static/: script.js
whip-rs/: Cargo.toml
